--- a/lesson22/index.html
+++ b/lesson22/index.html
@@ -7,5 +7,6 @@
   <body>
     <div id="app"></div>
     <script src="/dist/build.js"></script>
+    <link href="./dist/style.css" rel="stylesheet">
   </body>
 </html>
